<resources>

    <!--Nav-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>


    <string name="app_name">\Anything IT</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join Mike</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">MichaelHanson.dev Invite</string>
    <string name="sign_in">Sign in with Google!</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="dashboard">Dashboard</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>


    <string name="title_activity_add_ticket">New Ticket</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_ticket">Edit Ticket</string>
    <string name="title_activity_view_ticket">View Ticket</string>
    <string name="title_activity_login">Sign in</string>

    <string name="need_help">Local Tech Support</string>



    <!--Settings-->
    <string name="pref_header_about">About</string>
    <string name="summary_about">AnythingIT was made to help local people with anything tech related.</string>
    <string name="app_version">Alpha v2.21</string>
    <string name="summary_support">How could we improve?</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://anythingit.michaelhanson.dev/faq</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://anythingit.michaelhanson.dev/privacy</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://anythingit.michaelhanson.dev/terms</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>


    <string name="dark_Mode_Title">Dark Mode</string>
    <string name="dark_Mode_Summary">To change the app theme. Change your system theme. </string>
    <string name="dark_mode_key">Dark Mode ON</string>
    <string name="account_stats">Account Stats</string>
    <string name="Null">empty</string>
    <string name="last_login_date">Last Login Date:</string>
    <string name="email_address">Email Address:</string>



</resources>
