<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mrhanson.anythingit.SignInActivity"
    tools:showIn="@layout/fragment_profile">

    <TextView
        android:id="@+id/tv_accountInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Account Information"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tableLayout_Account_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_address" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="null" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Account Creation Date: " />

            <TextView
                android:id="@+id/tv_accountCreationDateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="null" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_login_date" />

            <TextView
                android:id="@+id/tv_lastLoginDateValue"
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:text="null" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tv_accountStatslbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tableLayout_Account_info"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        android:text="@string/account_stats"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tableLayout_accountStats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_accountStatslbl">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tv_numTicketslbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Number of Tickets:" />

            <TextView
                android:id="@+id/tv_numOfTickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="null" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tv_numOfConverstationslbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Number of Conversations: " />

            <TextView
                android:id="@+id/tv_numOfConversations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="null" />
        </TableRow>

    </TableLayout>

</RelativeLayout>